# qig-code

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  NOTEBOOK_OUTPUT_FILTERING.md  NOTEBOOK_TEST_FIXES.md  README.md  README_VALIDATION.md  README_quantum_simulation.md  TESTING.md  advanced_analysis.py  inaccessible_game_quantum.py  pyproject.toml  pytest.ini  quantum_qutrit_n3.py  requirements.txt  run_all_migrated_experiments.py  run_qutrit_experiment.py  run_qutrit_quick.py  setup.py  validate_phase3_entanglement.py  validate_qutrit_optimality.py
backlog/: index.md  update_index.py
cip/: README.md  cip0001.md  cip0002.md  cip0003.md  cip0004.md  cip0005.md  cip0006.md  cip0007.md  cip0008.md  cip0009.md  cip000A.md
docs/: README.md  boring_game_dynamics.md  duhamel_methods_comparison.md  entropy_time_analysis.md  entropy_time_paths.md  requirements.txt
examples/: boring_game_dynamics.ipynb  duhamel_methods_comparison.ipynb  effective_hamiltonian_derivation.ipynb  effective_hamiltonian_derivation.md  entropy_time_analysis.ipynb  entropy_time_paths.ipynb  generate-origin-paper-figures.ipynb  generic_decomposition_complete.py  generic_decomposition_demo.py  lme_numeric_symbolic_bridge.ipynb  multi_pair_regularisation.ipynb  multi_pair_regularisation.md  origin_paper_simulation_experiments.ipynb  symbolic_verification_experiments.ipynb  symbolic_vs_numerical_demo.py  test_effective_hamiltonian_derivation.py  test_effective_hamiltonian_derivation_fast.py
qig/: __init__.py  analysis.py  core.py  duhamel.py  dynamics.py  exponential_family.py  generic.py  generic_decomposition.py  pair_operators.py  reference_data.py  structure_constants.py  (+1 more)
(+168 files in other folders)
