[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qig"
version = "0.1.0"
description = "Quantum Information Geometry: Constrained dynamics in quantum exponential families"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Neil D. Lawrence"}
]
keywords = ["quantum", "information geometry", "entropy", "exponential family", "Fisher information"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "nbstripout>=0.6.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/lawrennd/qig-code"
Documentation = "https://github.com/lawrennd/qig-code#readme"
Repository = "https://github.com/lawrennd/qig-code"
"Bug Tracker" = "https://github.com/lawrennd/qig-code/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["qig*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

